deploy: a81b281c4dec08750d11a0aa4cbcee0ceb9ac45d

--- a/naps.vendor.lattice_machxo2.html
+++ b/naps.vendor.lattice_machxo2.html
@@ -39,7 +39,7 @@
     <link rel="index" title="Index" href="genindex.html" />
     <link rel="search" title="Search" href="search.html" />
     <link rel="next" title="naps.vendor.xilinx_s7 package" href="naps.vendor.xilinx_s7.html" />
-    <link rel="prev" title="naps.vendor.generic package" href="naps.vendor.generic.html" /> 
+    <link rel="prev" title="naps.vendor.lattice_ecp5 package" href="naps.vendor.lattice_ecp5.html" /> 
 </head>
 
 <body class="wy-body-for-nav">
@@ -295,7 +295,7 @@
           <footer>
     <div class="rst-footer-buttons" role="navigation" aria-label="footer navigation">
         <a href="naps.vendor.xilinx_s7.html" class="btn btn-neutral float-right" title="naps.vendor.xilinx_s7 package" accesskey="n" rel="next">Next <span class="fa fa-arrow-circle-right" aria-hidden="true"></span></a>
-        <a href="naps.vendor.generic.html" class="btn btn-neutral float-left" title="naps.vendor.generic package" accesskey="p" rel="prev"><span class="fa fa-arrow-circle-left" aria-hidden="true"></span> Previous</a>
+        <a href="naps.vendor.lattice_ecp5.html" class="btn btn-neutral float-left" title="naps.vendor.lattice_ecp5 package" accesskey="p" rel="prev"><span class="fa fa-arrow-circle-left" aria-hidden="true"></span> Previous</a>
     </div>
 
   <hr/>
