--- a/naps.cores.hispi.html
+++ b/naps.cores.hispi.html
@@ -38,7 +38,7 @@
     
     <link rel="index" title="Index" href="genindex.html" />
     <link rel="search" title="Search" href="search.html" />
-    <link rel="next" title="naps.cores.ila package" href="naps.cores.ila.html" />
+    <link rel="next" title="naps.cores.jtag package" href="naps.cores.jtag.html" />
     <link rel="prev" title="naps.cores.hdmi package" href="naps.cores.hdmi.html" /> 
 </head>
 
@@ -252,7 +252,7 @@
           </div>
           <footer>
     <div class="rst-footer-buttons" role="navigation" aria-label="footer navigation">
-        <a href="naps.cores.ila.html" class="btn btn-neutral float-right" title="naps.cores.ila package" accesskey="n" rel="next">Next <span class="fa fa-arrow-circle-right" aria-hidden="true"></span></a>
+        <a href="naps.cores.jtag.html" class="btn btn-neutral float-right" title="naps.cores.jtag package" accesskey="n" rel="next">Next <span class="fa fa-arrow-circle-right" aria-hidden="true"></span></a>
         <a href="naps.cores.hdmi.html" class="btn btn-neutral float-left" title="naps.cores.hdmi package" accesskey="p" rel="prev"><span class="fa fa-arrow-circle-left" aria-hidden="true"></span> Previous</a>
     </div>
 
