deploy: dac7ad68388352de7d162e375a36b1e72e169a21

--- a/genindex.html
+++ b/genindex.html
@@ -647,6 +647,8 @@
 </li>
         <li><a href="naps.cores.hdmi.html#naps.cores.hdmi.tmds2.TmdsEncoder.elaborate">(naps.cores.hdmi.tmds2.TmdsEncoder method)</a>
 </li>
+        <li><a href="naps.cores.hdmi.html#naps.cores.hdmi.tmds_decoder.TmdsDecoder.elaborate">(naps.cores.hdmi.tmds_decoder.TmdsDecoder method)</a>
+</li>
         <li><a href="naps.cores.hispi.html#naps.cores.hispi.hispi_rx.HispiRx.elaborate">(naps.cores.hispi.hispi_rx.HispiRx method)</a>
 </li>
         <li><a href="naps.cores.hispi.html#naps.cores.hispi.s7_phy.HispiPhy.elaborate">(naps.cores.hispi.s7_phy.HispiPhy method)</a>
@@ -1329,6 +1331,10 @@
         <li><a href="naps.cores.hdmi.html#module-naps.cores.hdmi.tmds">naps.cores.hdmi.tmds</a>
 </li>
         <li><a href="naps.cores.hdmi.html#module-naps.cores.hdmi.tmds2">naps.cores.hdmi.tmds2</a>
+</li>
+        <li><a href="naps.cores.hdmi.html#module-naps.cores.hdmi.tmds_decoder">naps.cores.hdmi.tmds_decoder</a>
+</li>
+        <li><a href="naps.cores.hdmi.html#module-naps.cores.hdmi.tmds_test">naps.cores.hdmi.tmds_test</a>
 </li>
         <li><a href="naps.cores.hispi.html#module-naps.cores.hispi">naps.cores.hispi</a>
 </li>
@@ -2017,6 +2023,20 @@
 </li>
       </ul></li>
       <li>
+    naps.cores.hdmi.tmds_decoder
+
+      <ul>
+        <li><a href="naps.cores.hdmi.html#module-naps.cores.hdmi.tmds_decoder">module</a>
+</li>
+      </ul></li>
+      <li>
+    naps.cores.hdmi.tmds_test
+
+      <ul>
+        <li><a href="naps.cores.hdmi.html#module-naps.cores.hdmi.tmds_test">module</a>
+</li>
+      </ul></li>
+      <li>
     naps.cores.hispi
 
       <ul>
@@ -2394,6 +2414,8 @@
         <li><a href="naps.cores.video.html#module-naps.cores.video.image_convoluter">module</a>
 </li>
       </ul></li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li>
     naps.cores.video.image_convoluter_test
 
@@ -2401,8 +2423,6 @@
         <li><a href="naps.cores.video.html#module-naps.cores.video.image_convoluter_test">module</a>
 </li>
       </ul></li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li>
     naps.cores.video.image_stream
 
@@ -3748,6 +3768,8 @@
 </li>
       <li><a href="naps.cores.video.html#naps.cores.video.image_convoluter_test.ImageProxyTest.test_request_zero">test_request_zero() (naps.cores.video.image_convoluter_test.ImageProxyTest method)</a>
 </li>
+      <li><a href="naps.cores.hdmi.html#naps.cores.hdmi.tmds_test.TestTmds.test_roundtrip">test_roundtrip() (naps.cores.hdmi.tmds_test.TestTmds method)</a>
+</li>
       <li><a href="naps.cores.debug.html#naps.cores.debug.packet_console_test.PacketConsoleTest.test_roundtrip_complex">test_roundtrip_complex() (naps.cores.debug.packet_console_test.PacketConsoleTest method)</a>
 </li>
       <li><a href="naps.cores.video.html#naps.cores.video.image_convoluter_test.VideoTransformerTest.test_shift_1x_negative_transformer">test_shift_1x_negative_transformer() (naps.cores.video.image_convoluter_test.VideoTransformerTest method)</a>
@@ -3831,6 +3853,10 @@
       <li><a href="naps.cores.stream.html#naps.cores.stream.gearbox_test.TestSimpleGearbox">TestSimpleGearbox (class in naps.cores.stream.gearbox_test)</a>
 </li>
       <li><a href="naps.soc.html#naps.soc.soc_platform_test.TestSocPlatform">TestSocPlatform (class in naps.soc.soc_platform_test)</a>
+</li>
+      <li><a href="naps.cores.hdmi.html#naps.cores.hdmi.tmds_test.TestTmds">TestTmds (class in naps.cores.hdmi.tmds_test)</a>
+</li>
+      <li><a href="naps.cores.hdmi.html#naps.cores.hdmi.tmds_decoder.TmdsDecoder">TmdsDecoder (class in naps.cores.hdmi.tmds_decoder)</a>
 </li>
       <li><a href="naps.cores.hdmi.html#naps.cores.hdmi.tmds.TmdsEncoder">TmdsEncoder (class in naps.cores.hdmi.tmds)</a>
 
