deploy: db8002303a0d71a1de6920fa084126e4ea5af070

--- a/naps.cores.stream.html
+++ b/naps.cores.stream.html
@@ -39,7 +39,7 @@
     <link rel="index" title="Index" href="genindex.html" />
     <link rel="search" title="Search" href="search.html" />
     <link rel="next" title="naps.cores.video package" href="naps.cores.video.html" />
-    <link rel="prev" title="naps.cores.plugin_module_streamer package" href="naps.cores.plugin_module_streamer.html" /> 
+    <link rel="prev" title="naps.cores.serdes package" href="naps.cores.serdes.html" /> 
 </head>
 
 <body class="wy-body-for-nav">
@@ -708,7 +708,7 @@ To be able to fulfil the stream contract, every output has a StreamBuffer.</p>
           <footer>
     <div class="rst-footer-buttons" role="navigation" aria-label="footer navigation">
         <a href="naps.cores.video.html" class="btn btn-neutral float-right" title="naps.cores.video package" accesskey="n" rel="next">Next <span class="fa fa-arrow-circle-right" aria-hidden="true"></span></a>
-        <a href="naps.cores.plugin_module_streamer.html" class="btn btn-neutral float-left" title="naps.cores.plugin_module_streamer package" accesskey="p" rel="prev"><span class="fa fa-arrow-circle-left" aria-hidden="true"></span> Previous</a>
+        <a href="naps.cores.serdes.html" class="btn btn-neutral float-left" title="naps.cores.serdes package" accesskey="p" rel="prev"><span class="fa fa-arrow-circle-left" aria-hidden="true"></span> Previous</a>
     </div>
 
   <hr/>
