--- a/naps.cores.peripherals.html
+++ b/naps.cores.peripherals.html
@@ -39,7 +39,7 @@
     <link rel="index" title="Index" href="genindex.html" />
     <link rel="search" title="Search" href="search.html" />
     <link rel="next" title="naps.cores.plugin_module_streamer package" href="naps.cores.plugin_module_streamer.html" />
-    <link rel="prev" title="naps.cores.mipi package" href="naps.cores.mipi.html" /> 
+    <link rel="prev" title="naps.cores.mipi.dsi_tx package" href="naps.cores.mipi.dsi_tx.html" /> 
 </head>
 
 <body class="wy-body-for-nav">
@@ -345,7 +345,7 @@
           <footer>
     <div class="rst-footer-buttons" role="navigation" aria-label="footer navigation">
         <a href="naps.cores.plugin_module_streamer.html" class="btn btn-neutral float-right" title="naps.cores.plugin_module_streamer package" accesskey="n" rel="next">Next <span class="fa fa-arrow-circle-right" aria-hidden="true"></span></a>
-        <a href="naps.cores.mipi.html" class="btn btn-neutral float-left" title="naps.cores.mipi package" accesskey="p" rel="prev"><span class="fa fa-arrow-circle-left" aria-hidden="true"></span> Previous</a>
+        <a href="naps.cores.mipi.dsi_tx.html" class="btn btn-neutral float-left" title="naps.cores.mipi.dsi_tx package" accesskey="p" rel="prev"><span class="fa fa-arrow-circle-left" aria-hidden="true"></span> Previous</a>
     </div>
 
   <hr/>
