--- a/genindex.html
+++ b/genindex.html
@@ -448,6 +448,8 @@
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="naps.util.html#naps.util.sim.SimPlatform.command_templates">command_templates (naps.util.sim.SimPlatform attribute)</a>
+</li>
       <li><a href="naps.cores.video.wavelet.html#naps.cores.video.wavelet.py_compressor.compress">compress() (in module naps.cores.video.wavelet.py_compressor)</a>
 </li>
       <li><a href="naps.cores.video.wavelet.html#naps.cores.video.wavelet.py_wavelet.compute_psnr">compute_psnr() (in module naps.cores.video.wavelet.py_wavelet)</a>
