deploy: 2b888aea99583ca59f9b95efacfa11273f4cf5ed

--- a/genindex.html
+++ b/genindex.html
@@ -552,6 +552,8 @@
 </li>
       <li><a href="naps.cores.hdmi.html#naps.cores.hdmi.tmds2.Decoder">Decoder (class in naps.cores.hdmi.tmds2)</a>
 </li>
+      <li><a href="naps.soc.pydriver.html#naps.soc.pydriver.hardware_proxy.Value.decoder">decoder (naps.soc.pydriver.hardware_proxy.Value attribute)</a>
+</li>
       <li><a href="naps.cores.hdmi.html#naps.cores.hdmi.InfoFrame.RgbQuantizationRange.DEFAULT">DEFAULT (naps.cores.hdmi.InfoFrame.RgbQuantizationRange attribute)</a>
 </li>
       <li><a href="naps.platform.html#naps.platform.colorlight_5a_75b_7_0.Colorlight5a75b70Platform.default_clk">default_clk (naps.platform.colorlight_5a_75b_7_0.Colorlight5a75b70Platform attribute)</a>
@@ -574,10 +576,10 @@
 </li>
       <li><a href="naps.soc.platform.zynq.html#naps.soc.platform.zynq.memory_accessor_devmem.DevMemAccessor">DevMemAccessor (class in naps.soc.platform.zynq.memory_accessor_devmem)</a>
 </li>
-      <li><a href="naps.cores.hdmi.html#naps.cores.hdmi.pattern_generator.DimmingPatternGenerator">DimmingPatternGenerator (class in naps.cores.hdmi.pattern_generator)</a>
-</li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="naps.cores.hdmi.html#naps.cores.hdmi.pattern_generator.DimmingPatternGenerator">DimmingPatternGenerator (class in naps.cores.hdmi.pattern_generator)</a>
+</li>
       <li><a href="naps.soc.html#naps.soc.memorymap.MemoryMap.direct_children">direct_children() (naps.soc.memorymap.MemoryMap property)</a>
 </li>
       <li><a href="naps.soc.html#naps.soc.memorymap.MemoryMap.direct_children_byte_len">direct_children_byte_len() (naps.soc.memorymap.MemoryMap property)</a>
@@ -951,6 +953,8 @@
       <li><a href="naps.soc.pydriver.html#naps.soc.pydriver.hardware_proxy.BitwiseAccessibleInteger.from_list">from_list() (naps.soc.pydriver.hardware_proxy.BitwiseAccessibleInteger static method)</a>
 </li>
       <li><a href="naps.cores.debug.html#naps.cores.debug.ila.fsm_probe">fsm_probe() (in module naps.cores.debug.ila)</a>
+</li>
+      <li><a href="naps.cores.debug.html#naps.cores.debug.fsm_status_reg.fsm_status_reg">fsm_status_reg() (in module naps.cores.debug.fsm_status_reg)</a>
 </li>
       <li><a href="naps.cores.ft601.html#naps.cores.ft601.ft601_stream_sink_test.Ft601FakeResource">Ft601FakeResource (class in naps.cores.ft601.ft601_stream_sink_test)</a>
 </li>
@@ -1377,6 +1381,8 @@
         <li><a href="naps.cores.debug.html#module-naps.cores.debug.blink_debug">naps.cores.debug.blink_debug</a>
 </li>
         <li><a href="naps.cores.debug.html#module-naps.cores.debug.clocking_debug">naps.cores.debug.clocking_debug</a>
+</li>
+        <li><a href="naps.cores.debug.html#module-naps.cores.debug.fsm_status_reg">naps.cores.debug.fsm_status_reg</a>
 </li>
         <li><a href="naps.cores.debug.html#module-naps.cores.debug.ila">naps.cores.debug.ila</a>
 </li>
@@ -1959,6 +1965,13 @@
 
       <ul>
         <li><a href="naps.cores.debug.html#module-naps.cores.debug.clocking_debug">module</a>
+</li>
+      </ul></li>
+      <li>
+    naps.cores.debug.fsm_status_reg
+
+      <ul>
+        <li><a href="naps.cores.debug.html#module-naps.cores.debug.fsm_status_reg">module</a>
 </li>
       </ul></li>
       <li>
@@ -2556,6 +2569,8 @@
         <li><a href="naps.cores.video.html#module-naps.cores.video.demo_source">module</a>
 </li>
       </ul></li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li>
     naps.cores.video.focus_peeking
 
@@ -2563,8 +2578,6 @@
         <li><a href="naps.cores.video.html#module-naps.cores.video.focus_peeking">module</a>
 </li>
       </ul></li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li>
     naps.cores.video.gamma_corrector
 
@@ -3844,6 +3857,8 @@
       <li><a href="naps.cores.stream.html#naps.cores.stream.gearbox_test.TestGearbox.test_dont_loose_last_8_to_4">test_dont_loose_last_8_to_4() (naps.cores.stream.gearbox_test.TestGearbox method)</a>
 </li>
       <li><a href="naps.util.html#naps.util.nmigen_misc_test.TestNMigenMisc.test_ends_with">test_ends_with() (naps.util.nmigen_misc_test.TestNMigenMisc method)</a>
+</li>
+      <li><a href="naps.cores.mipi.dsi_tx.html#naps.cores.mipi.dsi_tx.video2dsi_test.TestDsiProtocol.test_full_stack">test_full_stack() (naps.cores.mipi.dsi_tx.video2dsi_test.TestDsiProtocol method)</a>
 </li>
       <li><a href="naps.cores.stream.html#naps.cores.stream.gearbox_test.TestGearbox.test_gearbox_12_to_48_to_64">test_gearbox_12_to_48_to_64() (naps.cores.stream.gearbox_test.TestGearbox method)</a>
 </li>
