--- a/genindex.html
+++ b/genindex.html
@@ -336,6 +336,8 @@
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="naps.cores.peripherals.html#naps.cores.peripherals.bitbang_spi.BitbangSPI">BitbangSPI (class in naps.cores.peripherals.bitbang_spi)</a>
+</li>
       <li><a href="naps.soc.html#naps.soc.memorymap.Address.bits_of_word">bits_of_word() (naps.soc.memorymap.Address method)</a>
 </li>
       <li><a href="naps.cores.compression.html#naps.cores.compression.bit_stuffing.BitStuffer">BitStuffer (class in naps.cores.compression.bit_stuffing)</a>
@@ -750,6 +752,8 @@
         <li><a href="naps.cores.mipi.dsi_tx.html#naps.cores.mipi.dsi_tx.video2dsi.ImageStream2Dsi.elaborate">(naps.cores.mipi.dsi_tx.video2dsi.ImageStream2Dsi method)</a>
 </li>
         <li><a href="naps.cores.peripherals.html#naps.cores.peripherals.bitbang_i2c.BitbangI2c.elaborate">(naps.cores.peripherals.bitbang_i2c.BitbangI2c method)</a>
+</li>
+        <li><a href="naps.cores.peripherals.html#naps.cores.peripherals.bitbang_spi.BitbangSPI.elaborate">(naps.cores.peripherals.bitbang_spi.BitbangSPI method)</a>
 </li>
         <li><a href="naps.cores.peripherals.html#naps.cores.peripherals.csr_bank.CsrBank.elaborate">(naps.cores.peripherals.csr_bank.CsrBank method)</a>
 </li>
@@ -1487,6 +1491,8 @@
         <li><a href="naps.cores.peripherals.html#module-naps.cores.peripherals">naps.cores.peripherals</a>
 </li>
         <li><a href="naps.cores.peripherals.html#module-naps.cores.peripherals.bitbang_i2c">naps.cores.peripherals.bitbang_i2c</a>
+</li>
+        <li><a href="naps.cores.peripherals.html#module-naps.cores.peripherals.bitbang_spi">naps.cores.peripherals.bitbang_spi</a>
 </li>
         <li><a href="naps.cores.peripherals.html#module-naps.cores.peripherals.csr_bank">naps.cores.peripherals.csr_bank</a>
 </li>
@@ -2336,6 +2342,13 @@
 
       <ul>
         <li><a href="naps.cores.peripherals.html#module-naps.cores.peripherals.bitbang_i2c">module</a>
+</li>
+      </ul></li>
+      <li>
+    naps.cores.peripherals.bitbang_spi
+
+      <ul>
+        <li><a href="naps.cores.peripherals.html#module-naps.cores.peripherals.bitbang_spi">module</a>
 </li>
       </ul></li>
       <li>
