--- a/naps.cores.hispi.html
+++ b/naps.cores.hispi.html
@@ -39,7 +39,7 @@
     <link rel="index" title="Index" href="genindex.html" />
     <link rel="search" title="Search" href="search.html" />
     <link rel="next" title="naps.cores.jtag package" href="naps.cores.jtag.html" />
-    <link rel="prev" title="naps.cores.hdmi package" href="naps.cores.hdmi.html" /> 
+    <link rel="prev" title="naps.cores.hdmi.tx package" href="naps.cores.hdmi.tx.html" /> 
 </head>
 
 <body class="wy-body-for-nav">
@@ -253,7 +253,7 @@
           <footer>
     <div class="rst-footer-buttons" role="navigation" aria-label="footer navigation">
         <a href="naps.cores.jtag.html" class="btn btn-neutral float-right" title="naps.cores.jtag package" accesskey="n" rel="next">Next <span class="fa fa-arrow-circle-right" aria-hidden="true"></span></a>
-        <a href="naps.cores.hdmi.html" class="btn btn-neutral float-left" title="naps.cores.hdmi package" accesskey="p" rel="prev"><span class="fa fa-arrow-circle-left" aria-hidden="true"></span> Previous</a>
+        <a href="naps.cores.hdmi.tx.html" class="btn btn-neutral float-left" title="naps.cores.hdmi.tx package" accesskey="p" rel="prev"><span class="fa fa-arrow-circle-left" aria-hidden="true"></span> Previous</a>
     </div>
 
   <hr/>
