--- a/genindex.html
+++ b/genindex.html
@@ -3606,10 +3606,10 @@
 </li>
       <li><a href="naps.vendor.html#naps.vendor.platform_agnostic_elaboratable.PlatformAgnosticElaboratable">PlatformAgnosticElaboratable (class in naps.vendor.platform_agnostic_elaboratable)</a>
 </li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="naps.vendor.html#naps.vendor.platform_agnostic_elaboratable.PlatformNotSupportedError">PlatformNotSupportedError</a>
 </li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="naps.vendor.lattice_ecp5.html#naps.vendor.lattice_ecp5.clocking.Pll">Pll (class in naps.vendor.lattice_ecp5.clocking)</a>
 
       <ul>
@@ -3649,6 +3649,10 @@
       <li><a href="naps.vendor.html#naps.vendor.platform_agnostic_elaboratable.PrimitiveNotSupportedByPlatformError">PrimitiveNotSupportedByPlatformError</a>
 </li>
       <li><a href="naps.util.html#naps.util.size_estimation.print_module_sizes">print_module_sizes() (in module naps.util.size_estimation)</a>
+</li>
+      <li><a href="naps.util.html#naps.util.timer.print_summary_at_end">print_summary_at_end() (in module naps.util.timer)</a>
+</li>
+      <li><a href="naps.util.html#naps.util.timer.print_task_timing">print_task_timing() (in module naps.util.timer)</a>
 </li>
       <li><a href="naps.cores.debug.html#naps.cores.debug.tracer.Tracer.print_trace">print_trace (naps.cores.debug.tracer.Tracer attribute)</a>
 </li>
