deploy: 903493ccf959a9e535978f154bf37de5b297ff5d

--- a/genindex.html
+++ b/genindex.html
@@ -438,7 +438,13 @@
 </li>
       <li><a href="naps.stream.html#naps.stream.stream.Stream.clone">clone() (naps.stream.stream.Stream method)</a>
 </li>
+      <li><a href="naps.cores.cmv12k.html#naps.cores.cmv12k.s7_phy.Cmv12kPhy">Cmv12kPhy (class in naps.cores.cmv12k.s7_phy)</a>
+</li>
       <li><a href="naps.cores.cmv12k.html#naps.cores.cmv12k.pixel_remapper.Cmv12kPixelRemapper">Cmv12kPixelRemapper (class in naps.cores.cmv12k.pixel_remapper)</a>
+</li>
+      <li><a href="naps.cores.cmv12k.html#naps.cores.cmv12k.cmv12k_rx.Cmv12kRx">Cmv12kRx (class in naps.cores.cmv12k.cmv12k_rx)</a>
+</li>
+      <li><a href="naps.cores.cmv12k.html#naps.cores.cmv12k.cmv12k_spi.Cmv12kSpi">Cmv12kSpi (class in naps.cores.cmv12k.cmv12k_spi)</a>
 </li>
       <li><a href="naps.soc.html#naps.soc.memorymap.Address.collides">collides() (naps.soc.memorymap.Address method)</a>
 </li>
@@ -450,10 +456,10 @@
 </li>
       <li><a href="naps.cores.hdmi.html#naps.cores.hdmi.InfoFrame.AviInfoFrame.colorimetry">colorimetry (naps.cores.hdmi.InfoFrame.AviInfoFrame attribute)</a>
 </li>
-      <li><a href="naps.platform.html#naps.platform.colorlight_5a_75b_7_0.Colorlight5a75b70Platform">Colorlight5a75b70Platform (class in naps.platform.colorlight_5a_75b_7_0)</a>
-</li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="naps.platform.html#naps.platform.colorlight_5a_75b_7_0.Colorlight5a75b70Platform">Colorlight5a75b70Platform (class in naps.platform.colorlight_5a_75b_7_0)</a>
+</li>
       <li><a href="naps.util.html#naps.util.sim.SimPlatform.command_templates">command_templates (naps.util.sim.SimPlatform attribute)</a>
 </li>
       <li><a href="naps.cores.video.wavelet.html#naps.cores.video.wavelet.py_compressor.compress">compress() (in module naps.cores.video.wavelet.py_compressor)</a>
@@ -463,6 +469,8 @@
       <li><a href="naps.cores.video.wavelet.html#naps.cores.video.wavelet.py_compressor.compute_symbol_frequencies">compute_symbol_frequencies() (in module naps.cores.video.wavelet.py_compressor)</a>
 </li>
       <li><a href="naps.soc.html#naps.soc.soc_platform_test.ConcreteSocPlatform">ConcreteSocPlatform (class in naps.soc.soc_platform_test)</a>
+</li>
+      <li><a href="naps.cores.cmv12k.html#naps.cores.cmv12k.s7_phy.HostTrainer.configure_sensor">configure_sensor (naps.cores.cmv12k.s7_phy.HostTrainer attribute)</a>
 </li>
       <li><a href="naps.data_structure.html#naps.data_structure.bundle.Bundle.connect_downstream">connect_downstream() (naps.data_structure.bundle.Bundle method)</a>
 </li>
@@ -528,6 +536,8 @@
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="naps.cores.ft601.html#naps.cores.ft601.ft601_stream_sink_test.Ft601FakeResource.data">data (naps.cores.ft601.ft601_stream_sink_test.Ft601FakeResource attribute)</a>
 </li>
+      <li><a href="naps.cores.cmv12k.html#naps.cores.cmv12k.s7_phy.HostTrainer.data_alignment">data_alignment (naps.cores.cmv12k.s7_phy.HostTrainer attribute)</a>
+</li>
       <li><a href="naps.cores.hdmi.html#naps.cores.hdmi.InfoFrame.DataIslandPacket.data_bytes">data_bytes (naps.cores.hdmi.InfoFrame.DataIslandPacket attribute)</a>
 </li>
       <li><a href="naps.cores.mipi.html#naps.cores.mipi.common.PacketHeader.data_id">data_id (naps.cores.mipi.common.PacketHeader attribute)</a>
@@ -582,10 +592,10 @@
 </li>
       <li><a href="naps.soc.platform.zynq.html#naps.soc.platform.zynq.memory_accessor_devmem.DevMemAccessor">DevMemAccessor (class in naps.soc.platform.zynq.memory_accessor_devmem)</a>
 </li>
-      <li><a href="naps.cores.hdmi.tx.html#naps.cores.hdmi.tx.pattern_generator.DimmingPatternGenerator">DimmingPatternGenerator (class in naps.cores.hdmi.tx.pattern_generator)</a>
-</li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="naps.cores.hdmi.tx.html#naps.cores.hdmi.tx.pattern_generator.DimmingPatternGenerator">DimmingPatternGenerator (class in naps.cores.hdmi.tx.pattern_generator)</a>
+</li>
       <li><a href="naps.soc.html#naps.soc.memorymap.MemoryMap.direct_children">direct_children() (naps.soc.memorymap.MemoryMap property)</a>
 </li>
       <li><a href="naps.soc.html#naps.soc.memorymap.MemoryMap.direct_children_byte_len">direct_children_byte_len() (naps.soc.memorymap.MemoryMap property)</a>
@@ -673,7 +683,21 @@
 </li>
         <li><a href="naps.cores.axi.html#naps.cores.axi.stream_writer.AxiWriter.elaborate">(naps.cores.axi.stream_writer.AxiWriter method)</a>
 </li>
+        <li><a href="naps.cores.cmv12k.html#naps.cores.cmv12k.cmv12k_rx.Cmv12kRx.elaborate">(naps.cores.cmv12k.cmv12k_rx.Cmv12kRx method)</a>
+</li>
+        <li><a href="naps.cores.cmv12k.html#naps.cores.cmv12k.cmv12k_spi.Cmv12kSpi.elaborate">(naps.cores.cmv12k.cmv12k_spi.Cmv12kSpi method)</a>
+</li>
         <li><a href="naps.cores.cmv12k.html#naps.cores.cmv12k.pixel_remapper.Cmv12kPixelRemapper.elaborate">(naps.cores.cmv12k.pixel_remapper.Cmv12kPixelRemapper method)</a>
+</li>
+        <li><a href="naps.cores.cmv12k.html#naps.cores.cmv12k.s7_phy.Cmv12kPhy.elaborate">(naps.cores.cmv12k.s7_phy.Cmv12kPhy method)</a>
+</li>
+        <li><a href="naps.cores.cmv12k.html#naps.cores.cmv12k.s7_phy.HostTrainer.elaborate">(naps.cores.cmv12k.s7_phy.HostTrainer method)</a>
+</li>
+        <li><a href="naps.cores.cmv12k.html#naps.cores.cmv12k.s7_phy.IDelayIncremental.elaborate">(naps.cores.cmv12k.s7_phy.IDelayIncremental method)</a>
+</li>
+        <li><a href="naps.cores.cmv12k.html#naps.cores.cmv12k.s7_phy.ISerdes.elaborate">(naps.cores.cmv12k.s7_phy.ISerdes method)</a>
+</li>
+        <li><a href="naps.cores.cmv12k.html#naps.cores.cmv12k.s7_phy.MatchMonitor.elaborate">(naps.cores.cmv12k.s7_phy.MatchMonitor method)</a>
 </li>
         <li><a href="naps.cores.compression.html#naps.cores.compression.bit_stuffing.BitStuffer.elaborate">(naps.cores.compression.bit_stuffing.BitStuffer method)</a>
 </li>
@@ -844,6 +868,8 @@
         <li><a href="naps.cores.video.wavelet.html#naps.cores.video.wavelet.wavelet.Wavelet2D.elaborate">(naps.cores.video.wavelet.wavelet.Wavelet2D method)</a>
 </li>
         <li><a href="naps.cores.video.wavelet.html#naps.cores.video.wavelet.wavelet_compressor.WaveletCompressor.elaborate">(naps.cores.video.wavelet.wavelet_compressor.WaveletCompressor method)</a>
+</li>
+        <li><a href="naps.soc.html#naps.soc.csr_types.PulseReg.elaborate">(naps.soc.csr_types.PulseReg method)</a>
 </li>
         <li><a href="naps.soc.html#naps.soc.peripheral.Peripheral.elaborate">(naps.soc.peripheral.Peripheral method)</a>
 </li>
@@ -1126,10 +1152,10 @@
 </li>
       <li><a href="naps.cores.hdmi.rx.html#naps.cores.hdmi.rx.hdmi_rx.HdmiStreamSource">HdmiStreamSource (class in naps.cores.hdmi.rx.hdmi_rx)</a>
 </li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="naps.cores.hdmi.tx.html#naps.cores.hdmi.tx.hdmi_tx.HdmiTimingGenerator">HdmiTimingGenerator (class in naps.cores.hdmi.tx.hdmi_tx)</a>
 </li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="naps.cores.hdmi.tx.html#naps.cores.hdmi.tx.hdmi_tx.HdmiTx">HdmiTx (class in naps.cores.hdmi.tx.hdmi_tx)</a>
 </li>
       <li><a href="naps.cores.hdmi.html#naps.cores.hdmi.InfoFrame.DataIslandPacket.header_bytes">header_bytes (naps.cores.hdmi.InfoFrame.DataIslandPacket attribute)</a>
@@ -1145,6 +1171,8 @@
       <li><a href="naps.cores.hdmi.html#naps.cores.hdmi.InfoFrame.NonUniformPictureScaling.HORIZONTAL">HORIZONTAL (naps.cores.hdmi.InfoFrame.NonUniformPictureScaling attribute)</a>
 </li>
       <li><a href="naps.cores.hdmi.html#naps.cores.hdmi.InfoFrame.BarInfo.HORIZONTAL_BAR_INFO_VALID">HORIZONTAL_BAR_INFO_VALID (naps.cores.hdmi.InfoFrame.BarInfo attribute)</a>
+</li>
+      <li><a href="naps.cores.cmv12k.html#naps.cores.cmv12k.s7_phy.HostTrainer">HostTrainer (class in naps.cores.cmv12k.s7_phy)</a>
 </li>
       <li><a href="naps.vendor.xilinx_s7.html#naps.vendor.xilinx_s7.ps7.PS7.hp_slave_number">hp_slave_number (naps.vendor.xilinx_s7.ps7.PS7 attribute)</a>
 </li>
@@ -1175,6 +1203,8 @@
       <li><a href="naps.vendor.xilinx_s7.html#naps.vendor.xilinx_s7.io.IDelay">IDelay (class in naps.vendor.xilinx_s7.io)</a>
 </li>
       <li><a href="naps.vendor.xilinx_s7.html#naps.vendor.xilinx_s7.io.IDelayCtrl">IDelayCtrl (class in naps.vendor.xilinx_s7.io)</a>
+</li>
+      <li><a href="naps.cores.cmv12k.html#naps.cores.cmv12k.s7_phy.IDelayIncremental">IDelayIncremental (class in naps.cores.cmv12k.s7_phy)</a>
 </li>
       <li><a href="naps.cores.axi.html#naps.cores.axi.zynq_util.if_none_get_zynq_hp_port">if_none_get_zynq_hp_port() (in module naps.cores.axi.zynq_util)</a>
 </li>
@@ -1211,6 +1241,8 @@
       <li><a href="naps.cores.hdmi.html#naps.cores.hdmi.InfoFrame.AviInfoFrame.info_frame_version">info_frame_version (naps.cores.hdmi.InfoFrame.AviInfoFrame attribute)</a>
 </li>
       <li><a href="naps.cores.hdmi.html#naps.cores.hdmi.InfoFrame.ActiveFormatInformationPresent.INFORMATION_VALID">INFORMATION_VALID (naps.cores.hdmi.InfoFrame.ActiveFormatInformationPresent attribute)</a>
+</li>
+      <li><a href="naps.cores.cmv12k.html#naps.cores.cmv12k.s7_phy.HostTrainer.initial_alignment">initial_alignment (naps.cores.cmv12k.s7_phy.HostTrainer attribute)</a>
 </li>
       <li><a href="naps.soc.html#naps.soc.tracing_elaborate.inject_elaborate_wrapper">inject_elaborate_wrapper() (in module naps.soc.tracing_elaborate)</a>
 </li>
@@ -1260,6 +1292,8 @@
         <li><a href="naps.vendor.xilinx_s7.html#naps.vendor.xilinx_s7.clocking.Pll.is_valid_vco_conf">(naps.vendor.xilinx_s7.clocking.Pll static method)</a>
 </li>
       </ul></li>
+      <li><a href="naps.cores.cmv12k.html#naps.cores.cmv12k.s7_phy.ISerdes">ISerdes (class in naps.cores.cmv12k.s7_phy)</a>
+</li>
       <li><a href="naps.vendor.lattice_machxo2.html#naps.vendor.lattice_machxo2.io.ISerdes8">ISerdes8 (class in naps.vendor.lattice_machxo2.io)</a>
 </li>
       <li><a href="naps.cores.hdmi.html#naps.cores.hdmi.InfoFrame.ItContent.IT_CONTENT">IT_CONTENT (naps.cores.hdmi.InfoFrame.ItContent attribute)</a>
@@ -1350,6 +1384,8 @@
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="naps.soc.platform.zynq.html#naps.soc.platform.zynq.memory_accessor_devmem.DevMemAccessor.mask">mask (naps.soc.platform.zynq.memory_accessor_devmem.DevMemAccessor attribute)</a>
 </li>
+      <li><a href="naps.cores.cmv12k.html#naps.cores.cmv12k.s7_phy.MatchMonitor">MatchMonitor (class in naps.cores.cmv12k.s7_phy)</a>
+</li>
       <li><a href="naps.util.html#naps.util.nmigen_misc.max_error_freq">max_error_freq() (in module naps.util.nmigen_misc)</a>
 </li>
       <li><a href="naps.soc.pydriver.html#naps.soc.pydriver.hardware_proxy.MemoryAccessor">MemoryAccessor (class in naps.soc.pydriver.hardware_proxy)</a>
@@ -1408,7 +1444,13 @@
 </li>
         <li><a href="naps.cores.cmv12k.html#module-naps.cores.cmv12k">naps.cores.cmv12k</a>
 </li>
+        <li><a href="naps.cores.cmv12k.html#module-naps.cores.cmv12k.cmv12k_rx">naps.cores.cmv12k.cmv12k_rx</a>
+</li>
+        <li><a href="naps.cores.cmv12k.html#module-naps.cores.cmv12k.cmv12k_spi">naps.cores.cmv12k.cmv12k_spi</a>
+</li>
         <li><a href="naps.cores.cmv12k.html#module-naps.cores.cmv12k.pixel_remapper">naps.cores.cmv12k.pixel_remapper</a>
+</li>
+        <li><a href="naps.cores.cmv12k.html#module-naps.cores.cmv12k.s7_phy">naps.cores.cmv12k.s7_phy</a>
 </li>
         <li><a href="naps.cores.compression.html#module-naps.cores.compression">naps.cores.compression</a>
 </li>
@@ -1950,10 +1992,31 @@
 </li>
       </ul></li>
       <li>
+    naps.cores.cmv12k.cmv12k_rx
+
+      <ul>
+        <li><a href="naps.cores.cmv12k.html#module-naps.cores.cmv12k.cmv12k_rx">module</a>
+</li>
+      </ul></li>
+      <li>
+    naps.cores.cmv12k.cmv12k_spi
+
+      <ul>
+        <li><a href="naps.cores.cmv12k.html#module-naps.cores.cmv12k.cmv12k_spi">module</a>
+</li>
+      </ul></li>
+      <li>
     naps.cores.cmv12k.pixel_remapper
 
       <ul>
         <li><a href="naps.cores.cmv12k.html#module-naps.cores.cmv12k.pixel_remapper">module</a>
+</li>
+      </ul></li>
+      <li>
+    naps.cores.cmv12k.s7_phy
+
+      <ul>
+        <li><a href="naps.cores.cmv12k.html#module-naps.cores.cmv12k.s7_phy">module</a>
 </li>
       </ul></li>
       <li>
@@ -2656,6 +2719,8 @@
         <li><a href="naps.cores.video.html#module-naps.cores.video.debayer">module</a>
 </li>
       </ul></li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li>
     naps.cores.video.debayer_test
 
@@ -2663,8 +2728,6 @@
         <li><a href="naps.cores.video.html#module-naps.cores.video.debayer_test">module</a>
 </li>
       </ul></li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li>
     naps.cores.video.demo_source
 
@@ -3684,6 +3747,8 @@
 </li>
       <li><a href="naps.util.html#naps.util.sim.pulse">pulse() (in module naps.util.sim)</a>
 </li>
+      <li><a href="naps.soc.html#naps.soc.csr_types.PulseReg">PulseReg (class in naps.soc.csr_types)</a>
+</li>
       <li><a href="naps.cores.hdmi.html#naps.cores.hdmi.parse_modeline.VideoTiming.pxclk">pxclk (naps.cores.hdmi.parse_modeline.VideoTiming attribute)</a>
 </li>
       <li><a href="naps.util.html#naps.util.py_serialize.py_serialize">py_serialize() (in module naps.util.py_serialize)</a>
@@ -3757,6 +3822,8 @@
       <li><a href="naps.cores.dram_packet_ringbuffer.html#naps.cores.dram_packet_ringbuffer.cpu_if.DramPacketRingbufferCpuReader.read_packet_to_file">read_packet_to_file (naps.cores.dram_packet_ringbuffer.cpu_if.DramPacketRingbufferCpuReader attribute)</a>
 </li>
       <li><a href="naps.cores.peripherals.html#naps.cores.peripherals.soc_memory.SocMemory.read_port">read_port() (naps.cores.peripherals.soc_memory.SocMemory method)</a>
+</li>
+      <li><a href="naps.cores.cmv12k.html#naps.cores.cmv12k.cmv12k_spi.Cmv12kSpi.read_reg">read_reg (naps.cores.cmv12k.cmv12k_spi.Cmv12kSpi attribute)</a>
 </li>
       <li><a href="naps.cores.video.wavelet.html#naps.cores.video.wavelet.py_wavelet_repack.real_width">real_width() (in module naps.cores.video.wavelet.py_wavelet_repack)</a>
 </li>
@@ -3836,6 +3903,10 @@
 </li>
       <li><a href="naps.cores.serdes.html#naps.cores.serdes.serializer.Serializer">Serializer (class in naps.cores.serdes.serializer)</a>
 </li>
+      <li><a href="naps.cores.cmv12k.html#naps.cores.cmv12k.cmv12k_spi.Cmv12kSpi.set_bit_mode">set_bit_mode (naps.cores.cmv12k.cmv12k_spi.Cmv12kSpi attribute)</a>
+</li>
+      <li><a href="naps.cores.cmv12k.html#naps.cores.cmv12k.s7_phy.HostTrainer.set_clock_delay">set_clock_delay (naps.cores.cmv12k.s7_phy.HostTrainer attribute)</a>
+</li>
       <li><a href="naps.cores.hdmi.rx.html#naps.cores.hdmi.rx.hdmi_rx.HdmiStreamSource.set_delay">set_delay (naps.cores.hdmi.rx.hdmi_rx.HdmiStreamSource attribute)</a>
 
       <ul>
@@ -3843,6 +3914,8 @@
 </li>
       </ul></li>
       <li><a href="naps.cores.mipi.dsi_tx.html#naps.cores.mipi.dsi_tx.types.DsiShortPacketDataType.SET_MAXIMUM_RETURN_PACKET_SIZE">SET_MAXIMUM_RETURN_PACKET_SIZE (naps.cores.mipi.dsi_tx.types.DsiShortPacketDataType attribute)</a>
+</li>
+      <li><a href="naps.cores.cmv12k.html#naps.cores.cmv12k.cmv12k_spi.Cmv12kSpi.set_train_pattern">set_train_pattern (naps.cores.cmv12k.cmv12k_spi.Cmv12kSpi attribute)</a>
 </li>
       <li><a href="naps.cores.mipi.dsi_tx.html#naps.cores.mipi.dsi_tx.py_dsi_generator.short_packet">short_packet() (in module naps.cores.mipi.dsi_tx.py_dsi_generator)</a>
 </li>
@@ -3876,10 +3949,10 @@
 </li>
       <li><a href="naps.soc.html#naps.soc.soc_platform.SocPlatform">SocPlatform (class in naps.soc.soc_platform)</a>
 </li>
-      <li><a href="naps.soc.html#naps.soc.smoke_test.SocSmokeTest">SocSmokeTest (class in naps.soc.smoke_test)</a>
-</li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="naps.soc.html#naps.soc.smoke_test.SocSmokeTest">SocSmokeTest (class in naps.soc.smoke_test)</a>
+</li>
       <li><a href="naps.cores.video.html#naps.cores.video.demo_source.SolidColorDemoVideoSource">SolidColorDemoVideoSource() (in module naps.cores.video.demo_source)</a>
 </li>
       <li><a href="naps.cores.mipi.dsi_tx.html#naps.cores.mipi.dsi_tx.types.DsiErrorResponse.SOT_ERROR">SOT_ERROR (naps.cores.mipi.dsi_tx.types.DsiErrorResponse attribute)</a>
@@ -4252,9 +4325,11 @@
 </li>
       <li><a href="naps.cores.debug.html#naps.cores.debug.tracer.Tracer">Tracer (class in naps.cores.debug.tracer)</a>
 </li>
-      <li><a href="naps.cores.hdmi.rx.html#naps.cores.hdmi.rx.hdmi_rx.HdmiStreamSource.train">train (naps.cores.hdmi.rx.hdmi_rx.HdmiStreamSource attribute)</a>
+      <li><a href="naps.cores.cmv12k.html#naps.cores.cmv12k.s7_phy.HostTrainer.train">train (naps.cores.cmv12k.s7_phy.HostTrainer attribute)</a>
 
       <ul>
+        <li><a href="naps.cores.hdmi.rx.html#naps.cores.hdmi.rx.hdmi_rx.HdmiStreamSource.train">(naps.cores.hdmi.rx.hdmi_rx.HdmiStreamSource attribute)</a>
+</li>
         <li><a href="naps.cores.plugin_module_streamer.html#naps.cores.plugin_module_streamer.rx.PluginModuleStreamerRx.train">(naps.cores.plugin_module_streamer.rx.PluginModuleStreamerRx attribute)</a>
 </li>
       </ul></li>
@@ -4308,6 +4383,8 @@
 </li>
       <li><a href="naps.cores.mipi.dsi_tx.html#naps.cores.mipi.dsi_tx.types.DsiShortPacketDataType.V_SYNC_START">V_SYNC_START (naps.cores.mipi.dsi_tx.types.DsiShortPacketDataType attribute)</a>
 </li>
+      <li><a href="naps.cores.cmv12k.html#naps.cores.cmv12k.s7_phy.HostTrainer.validate">validate (naps.cores.cmv12k.s7_phy.HostTrainer attribute)</a>
+</li>
       <li><a href="naps.soc.pydriver.html#naps.soc.pydriver.hardware_proxy.Value">Value (class in naps.soc.pydriver.hardware_proxy)</a>
 </li>
       <li><a href="naps.cores.compression.html#naps.cores.compression.bit_stuffing.VariableWidthStream">VariableWidthStream (class in naps.cores.compression.bit_stuffing)</a>
@@ -4336,10 +4413,10 @@
 </li>
       <li><a href="naps.cores.hdmi.html#naps.cores.hdmi.InfoFrame.NonUniformPictureScaling.VERTICAL">VERTICAL (naps.cores.hdmi.InfoFrame.NonUniformPictureScaling attribute)</a>
 </li>
-      <li><a href="naps.cores.hdmi.html#naps.cores.hdmi.InfoFrame.BarInfo.VERTICAL_BAR_INFO_VALID">VERTICAL_BAR_INFO_VALID (naps.cores.hdmi.InfoFrame.BarInfo attribute)</a>
-</li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="naps.cores.hdmi.html#naps.cores.hdmi.InfoFrame.BarInfo.VERTICAL_BAR_INFO_VALID">VERTICAL_BAR_INFO_VALID (naps.cores.hdmi.InfoFrame.BarInfo attribute)</a>
+</li>
       <li><a href="naps.cores.hdmi.html#naps.cores.hdmi.InfoFrame.VideoIdentificationCode.VID_1920_1080_24p">VID_1920_1080_24p (naps.cores.hdmi.InfoFrame.VideoIdentificationCode attribute)</a>
 </li>
       <li><a href="naps.cores.hdmi.html#naps.cores.hdmi.InfoFrame.VideoIdentificationCode.VID_1920_1080_25p">VID_1920_1080_25p (naps.cores.hdmi.InfoFrame.VideoIdentificationCode attribute)</a>
@@ -4425,6 +4502,8 @@
       <li><a href="naps.stream.html#naps.stream.sim_util.write_packet_to_stream">write_packet_to_stream() (in module naps.stream.sim_util)</a>
 </li>
       <li><a href="naps.cores.peripherals.html#naps.cores.peripherals.soc_memory.SocMemory.write_port">write_port() (naps.cores.peripherals.soc_memory.SocMemory method)</a>
+</li>
+      <li><a href="naps.cores.cmv12k.html#naps.cores.cmv12k.cmv12k_spi.Cmv12kSpi.write_reg">write_reg (naps.cores.cmv12k.cmv12k_spi.Cmv12kSpi attribute)</a>
 </li>
       <li><a href="naps.stream.html#naps.stream.sim_util.write_to_stream">write_to_stream() (in module naps.stream.sim_util)</a>
 </li>
